--- a/trunk/tasma/network-manager/po/fr.po
+++ b/trunk/tasma/network-manager/po/fr.po
@@ -1,16 +1,17 @@
-# translation of network_manager_kga.po to Türkçe
+# translation of fr.po to french
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Atilla Aktuna <aktuna@gmail.com>, 2006.
+# Amine Chadly <amine.chadly@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: network_manager_kga\n"
+"Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-27 14:25+0200\n"
-"PO-Revision-Date: 2006-12-09 09:53+0200\n"
-"Last-Translator: Atilla Aktuna <aktuna@gmail.com>\n"
-"Language-Team: Türkçe <tr@li.org>\n"
+"PO-Revision-Date: 2007-03-09 00:51+0200\n"
+"Last-Translator: Amine Chadly <amine.chadly@gmail.com>\n"
+"Language-Team: french <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -30,12 +31,11 @@ msgstr "Adresse"
 
 #: browser.py:62 connection.py:319
 msgid "Automatic"
-msgstr ""
+msgstr "Automatiquement"
 
 #: browser.py:90
-#, fuzzy
 msgid "Turn on/off connection"
-msgstr "Connection nouvelle"
+msgstr "Activer/Désactiver la connection"
 
 #: browser.py:103
 #, fuzzy
@@ -43,9 +43,8 @@ msgid "Configure connection"
 msgstr "Configurer la connection réseau"
 
 #: browser.py:106
-#, fuzzy
 msgid "Delete connection"
-msgstr "Effacer la connection?"
+msgstr "Effacer la connection"
 
 #: browser.py:124
 #, python-format
@@ -54,36 +53,33 @@ msgid ""
 "'%s'\n"
 "connection?"
 msgstr ""
-"Est-ce qu'on va effacer\n"
+"Dois je supprimer la \n"
 "la connection \n"
-"'%s ?"
+"'%s' ?"
 
 #: browser.py:125
 msgid "Delete connection?"
-msgstr "Effacer la connection?"
+msgstr "Supprimer la connection?"
 
 #: browser.py:205
 msgid "No device!"
-msgstr ""
+msgstr "Pas de périphérique!"
 
 #: browser.py:381 network-applet.py:456
-#, fuzzy
 msgid "New connection"
-msgstr "Connection nouvelle"
+msgstr "Créer une connection"
 
 #: browser.py:386 nameconf.py:28
-#, fuzzy
 msgid "Name Service Settings"
-msgstr "Préférences réseau"
+msgstr "Configuration du service de nom"
 
 #: browser.py:420
-#, fuzzy
 msgid "Network Connections Help"
-msgstr "Connections réseaux"
+msgstr "Aide à propos des connections réseaux"
 
 #: nameconf.py:35
 msgid "Computer"
-msgstr "L'ordinateur"
+msgstr "Ordinateur"
 
 #: nameconf.py:41
 msgid "Host name:"
@@ -95,11 +91,11 @@ msgstr "Serveurs de nom"
 
 #: nameconf.py:56
 msgid "Up"
-msgstr ""
+msgstr "Activée"
 
 #: nameconf.py:59
 msgid "Down"
-msgstr ""
+msgstr "Désactivée"
 
 #: nameconf.py:134
 msgid "Add Name Server"
@@ -107,49 +103,47 @@ msgstr "Ajouter un serveur de nom"
 
 #: nameconf.py:135
 msgid "Name server:"
-msgstr "Serveur de nom"
+msgstr "Serveur de nom:"
 
 #: connection.py:43
 msgid "<hidden>"
-msgstr ""
+msgstr "<caché>"
 
 #: connection.py:76
 msgid "Scan results:"
-msgstr ""
+msgstr "Résultats du sondage:"
 
 #: connection.py:91
 msgid "Scan again"
-msgstr ""
+msgstr "Sonder de nouveau"
 
 #: connection.py:93
 msgid "Use"
-msgstr ""
+msgstr "Utiliser"
 
 #: connection.py:148
-#, fuzzy
 msgid "Connection name:"
-msgstr "Types de connections"
+msgstr "Nom de la connection :"
 
 #: connection.py:155
-#, fuzzy
 msgid "Connection"
-msgstr "Connecter"
+msgstr "Connection"
 
 #: connection.py:161
 msgid "Device:"
-msgstr "Dispositif"
+msgstr "Périphérique:"
 
 #: connection.py:166
 msgid "Select"
-msgstr ""
+msgstr "Sélectionner"
 
 #: connection.py:180
 msgid "Scan"
-msgstr "Balayer"
+msgstr "Sonder"
 
 #: connection.py:197
 msgid "Mode:"
-msgstr ""
+msgstr "Mode:"
 
 #: connection.py:205
 msgid "No authentication"
@@ -157,12 +151,11 @@ msgstr "Pas d'authentification"
 
 #: connection.py:223 connection.py:234
 msgid "Password:"
-msgstr "Mot de passe"
+msgstr "Mot de passe:"
 
 #: connection.py:231
-#, fuzzy
 msgid "User name:"
-msgstr "Nom d'hôte"
+msgstr "Nom d'utlisateur"
 
 #: connection.py:263
 #, fuzzy
@@ -171,7 +164,7 @@ msgstr "Préférences réseau"
 
 #: connection.py:273
 msgid "Automatic query (DHCP)"
-msgstr "Query automatique (DHCP)"
+msgstr "Requête automatique (DHCP)"
 
 #: connection.py:278
 msgid "Manual"
@@ -179,47 +172,47 @@ msgstr "Manuel"
 
 #: connection.py:289 connection.py:306 connection.py:321
 msgid "Custom"
-msgstr ""
+msgstr "Personnalisé"
 
 #: connection.py:294
 msgid "Net mask:"
-msgstr "Masque de réseau"
+msgstr "Masque de réseau:"
 
 #: connection.py:301
 msgid "Gateway:"
-msgstr "Passerelle"
+msgstr "Passerelle:"
 
 #: connection.py:512
 msgid "Configure network connection"
 msgstr "Configurer la connection réseau"
 
 #: network-manager.py:33 network-manager.py:85
-#, fuzzy
 msgid "Network Manager"
-msgstr "Préférences réseau"
+msgstr "Gestionnaire réseau"
 
 #: network-manager.py:80
-#, fuzzy
 msgid "Network manager module is already started!"
-msgstr "Le réseau KGA fonctionne"
+msgstr "Le gestionnaire réseau est déjà en cours d'exécution!"
 
 #: comariface.py:162
 msgid "Waiting COMAR..."
-msgstr ""
+msgstr "En attente de COMAR..."
 
 #: comariface.py:163
 msgid "Connection to the COMAR unexpectedly closed, trying to reconnect..."
-msgstr ""
+msgstr "La connection avec COMAR a été perdue, tentative de reconnection en cours..."
 
 #: comariface.py:182 comariface.py:199 network-applet.py:111
 msgid ""
 "Cannot connect to the COMAR! If it is not running you should start it with "
 "the 'service comar start' command in a root console."
 msgstr ""
+"Impossible de se connecter à COMAR! S'il n'est pas déjà lancé, veuillez le "
+"faire en lançant la commande 'service comar start' dans une invite de commande de l'administrateur."
 
 #: comariface.py:365
 msgid "new connection"
-msgstr "Connection nouvelle"
+msgstr "Nouvelle connection"
 
 #: newconn.py:26
 #, fuzzy
@@ -227,9 +220,8 @@ msgid "Create a new connection"
 msgstr "Créer une connection"
 
 #: newconn.py:31
-#, fuzzy
 msgid "Select device:"
-msgstr "Pas de dispositif"
+msgstr "Sélectionner le périphérique:"
 
 #: newconn.py:58
 msgid "Create"
@@ -237,83 +229,37 @@ msgstr "Créer"
 
 #: newconn.py:112
 msgid "No suitable device found"
-msgstr ""
+msgstr "Aucun périphérique adéquat trouvé"
 
 #: newconn.py:118
 msgid "Install network packages!"
-msgstr "Installation des pacquets de réseau"
+msgstr "Installation des pacquets réseau!"
 
 #: newconn.py:119
 msgid "No package with COMAR network scripts are installed yet."
-msgstr "Pas de paquets installé avec script de réseau COMAR"
+msgstr "Aucun paquet contenant des scripts réseau COMAR n'ont été installé jusqu'à présent."
 
 #: network-applet.py:293
 msgid "Firewall..."
-msgstr ""
+msgstr "Pare-feu..."
 
 #: network-applet.py:294
-#, fuzzy
 msgid "Edit Connections..."
-msgstr "Connections réseaux"
+msgstr "Editer les connections réseaux..."
 
 #: network-applet.py:296
 msgid "Icon Per Device"
-msgstr ""
+msgstr "Une icône par périphérique"
 
 #: network-applet.py:297
 msgid "Single Icon"
-msgstr ""
+msgstr "Une seule icône"
 
 #: network-applet.py:341
 msgid "Should network-applet start automatically when you login?"
-msgstr ""
+msgstr "Démarrer automatiquement l'applet réseau dès votre connection?"
 
 #: network-applet.py:491
-#, fuzzy
 msgid "Network Applet"
-msgstr "Préférences réseau"
+msgstr "Applet Réseau"
 
-#~ msgid "Passphrase:"
-#~ msgstr "Phrase de passe:"
-
-#~ msgid "Login"
-#~ msgstr "Login"
-
-#~ msgid "Key"
-#~ msgstr "Clé"
-
-#~ msgid "Network:"
-#~ msgstr "Réseau"
-
-#~ msgid "Basic"
-#~ msgstr "Essentiel"
-
-#~ msgid "Accept"
-#~ msgstr "Accepte"
-
-#~ msgid "Phone number"
-#~ msgstr "Numèro de téléphone"
-
-#~ msgid "Active"
-#~ msgstr "Active"
-
-#~ msgid "Inactive"
-#~ msgstr "Inactive"
-
-#~ msgid "Network connections:"
-#~ msgstr "Connections réseaux"
-
-#~ msgid "Settings"
-#~ msgstr "Préférences"
-
-#~ msgid "Disconnect"
-#~ msgstr "Se déconnecter"
-
-#~ msgid "Unconfigured"
-#~ msgstr "non-configuré"
-
-#~ msgid "Network connections"
-#~ msgstr "Connections réseaux"
-
-#~ msgid "Select a connection type:"
-#~ msgstr "Choisir un type de connection"
